# ChangeLog for sys-kernel/gentoo-dev-sources
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-dev-sources/ChangeLog,v 1.37 2004/02/10 15:58:44 brad_mssw Exp $

  10 Feb 2004; Brad House <brad_mssw@gentoo.org>
  gentoo-dev-sources-2.6.2.ebuild, gentoo-dev-sources-2.6.3_rc2.ebuild:
  amd64 keywording

*gentoo-dev-sources-2.6.3_rc2 (10 Feb 2004)

  10 Feb 2004; John Mylchreest <johnm@gentoo.org>
  gentoo-dev-sources-2.6.3_rc2.ebuild:
  bump to 2.6.3_rc2

*gentoo-dev-sources-2.6.3_rc1 (09 Feb 2004)

  09 Feb 2004; John Mylchreest <johnm@gentoo.org>
  gentoo-dev-sources-2.6.3_rc1.ebuild:
  bump to latest rc release. fixes several alsa issues, mass arch compat fixes.

  05 Feb 2004; Brad House <brad_mssw@gentoo.org>
  gentoo-dev-sources-2.6.2.ebuild:
  looks good, marking ~x86 and ~amd64

*gentoo-dev-sources-2.6.2 (05 Feb 2004)

  05 Feb 2004; John Mylchreest <johnm@gentoo.org>
  gentoo-dev-sources-2.6.2.ebuild:
  initial commit of 2.6.2, hardmasked until verified amd64 worthy

  05 Feb 2004; John Mylchreest <johnm@gentoo.org>
  gentoo-dev-sources-2.6.1-r1.ebuild, gentoo-dev-sources-2.6.1.ebuild:
  tidy up ready for 2.6.2, marking stable 2.6.1-r1

*gentoo-dev-sources-2.6.2_rc1 (24 Jan 2004)

  24 Jan 2004; Brad House <brad_mssw@gentoo.org>
  gentoo-dev-sources-2.6.2_rc1.ebuild:
  test version, bump to _rc1

  12 Jan 2004; John Mylchreest <johnm@gentoo.org>
  gentoo-dev-sources-2.6.1-r1.ebuild:
  committing -r1 to testing x86/amd64and for kernel-2.eclass testing

*gentoo-dev-sources-2.6.1-r1 (12 Jan 2004)

  12 Jan 2004; Brad House <brad_mssw@gentoo.org>
  gentoo-dev-sources-2.6.1-r1.ebuild:
  Genpatches experimental changes. KEYWORDed -* for now until further testing is
  complete

  11 Jan 2004; John Mylchreest <johnm@gentoo.org> :
  cleanup in prep for eclass migration

*gentoo-dev-sources-2.6.1 (09 Jan 2004)

  09 Jan 2004; Brad House <brad_mssw@gentoo.org>