@@ -1,3 +1,0 @@
-MD5 0f9885e1262d6abc453787088ce7c398 patch-2.6.2-rc1.bz2 2058256
-MD5 fa82d1e4be518261b2eeb78eabf9cca7 linux-2.6.1.tar.bz2 33240033
-MD5 798bb5ba2266a1e16bf3558d21774791 genpatches-2.6-2.17.tar.bz2 510870
