@@ -1,3 +1,0 @@
-MD5 4cf787c89c87dce7dc83818e9a388eea patch-2.6.3-rc1.bz2 1624073
-MD5 2a745088acba366f22f8bd3e284a84d4 linux-2.6.2.tar.bz2 33899733
-MD5 fe88bdfcbf12c25e596389ae791fcce2 genpatches-2.6-2.19.tar.bz2 386453
