@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/gentoo-dev-sources
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-dev-sources/ChangeLog,v 1.37 2004/02/10 15:58:44 brad_mssw Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-dev-sources/ChangeLog,v 1.38 2004/02/10 17:56:16 johnm Exp $
+
+  10 Feb 2004; John Mylchreest <johnm@gentoo.org>
+  gentoo-dev-sources-2.6.2_rc1.ebuild, gentoo-dev-sources-2.6.3_rc1.ebuild:
+  small tidyup
 
   10 Feb 2004; Brad House <brad_mssw@gentoo.org>
   gentoo-dev-sources-2.6.2.ebuild, gentoo-dev-sources-2.6.3_rc2.ebuild:
